# basel-pillar3-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  TOOLING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: banks.yaml  identities.yaml  magnitude_bands.yaml  p3dh_km1_map.yaml  reconciliation.yaml
config/templates/: km1.yaml  ov1.yaml
data/golden/expected/: SCHEMA.md  barclays_2026Q1_km1.yaml  (+4 more)
docs/: EXTRACTION_SETUP.md  GOLDEN_SET.md
research/: basel-pillar3-taxonomy.md  extraction-stack-benchmark.md
scripts/: demo.py  demo_report.py  fetch_barclays_pillar3.py  fetch_hsbc_pillar3.py  measure_barclays_km1.py  smoke_extraction.py
src/isda_p3/: __init__.py  cli.py  config.py  config_load.py  golden.py  models.py  pipeline.py
tests/: __init__.py  conftest.py
tests/fixtures/: p3dh_km1_sample.csv
tests/golden/: __init__.py  test_barclays_km1_accuracy.py  test_hsbc_km1_accuracy.py
tests/integration/: __init__.py  test_benchmark_real.py  test_docling_real.py  test_m1_real.py  test_secondary_real.py
tests/unit/: __init__.py  test_analytics.py  test_benchmark.py  test_checks.py  test_cli_run.py  test_config.py  test_config_load.py  test_dataset.py  test_docling_engine.py  test_export.py  test_extraction_env.py  test_golden_compare.py  test_llm_mapper.py  test_map_fields.py  test_models.py  test_normalise.py  test_ov1.py  test_p3dh.py  test_period_resolver.py  test_pipeline_e2e.py  test_pipeline_two_engine.py  test_reconcile_engine.py  test_registry.py  test_review_queue.py  test_run_all.py  test_secondary_engine.py
(+30 files in other folders)
