[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isda-p3"
version = "0.1.0"
description = "Auditable Basel Pillar 3 disclosure extraction & benchmarking."
requires-python = ">=3.11"
dependencies = [
    "docling",
    "camelot-py[base]",
    "pdfplumber",
    "pydantic>=2",
    "anthropic",
    "langchain-anthropic",
    "pandas",
    "pyarrow",
    "openpyxl",
    "scipy",
    "pyyaml",
    "python-dotenv",
    "requests",
    "tenacity",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
azure = ["azure-ai-documentintelligence"]

[project.scripts]
isda-p3 = "isda_p3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real PDF, slow, opt-in",
    "golden: regression",
]
addopts = "-m 'not integration'"
